#
#  Stechec project is free software; you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation; either version 2 of the License, or
#  (at your option) any later version.
#
#  Stechec project is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with the Stechec project; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#
#  Copyright (C) 2007 Prologin
#

bashdir = $(pkglibdir)/bash

nodist_bash_DATA =				\
	meta_cx.sh

dist_bash_SCRIPTS =				\
	check_cheating.sh			\
	compile_champion.sh			\
	run_client.sh				\
	run_server.sh

bin_SCRIPTS =					\
	meta_server				\
	main_server

EXTRA_DIST = meta_cx.sh.in
