bin_PROGRAMS = teamroster2

teamroster2_SOURCES = BBowlWidget.cc  \
	My_DropDown.cc \
	PlayerLineWidget.cc \
	TeamrosterApp.cc \
	Race.cc \
	RaceParser.cc \
	Helper-classes.cc \
	Position.cc \
	RaceHandler.cc \
	Teamroster.cc

teamroster2_LDADD = $(PARAGUI_LIBS) -lxerces-c

INCLUDES = $(PARAGUI_CFLAGS)
