# -*- Makefile -*-
#
#  Stechec project is free software; you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation; either version 2 of the License, or
#  (at your option) any later version.
#
#  Copyright (C) 2005, 2006 Prologin
#

SRC 		= ant.tex
YAML		= $(srcdir)/../data/ant.yml

include $(top_srcdir)/build-aux/subject.mk
